# convergio-scaffold

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
.github/workflows/: ci.yml
crates/convergio-scaffold/: Cargo.toml
crates/convergio-scaffold/src/: lib.rs  routes.rs  scaffold_agent_tpl.rs  scaffold_gen.rs  scaffold_templates.rs  scaffold_tests.rs
docs/adr/: 001-extraction.md  ADR-038-onboarding-scaffolding.md
