[workspace]
resolver = "2"
members = ["crates/convergio-scaffold"]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio-scaffold"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["ws", "multipart"] }
